--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express-session": "^1.17.1",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
-    "mongoose": "^5.12.7"
+    "mongoose": "^5.12.7",
+    "mongoose-auto-increment": "^5.0.1"
   },
   "devDependencies": {},
   "repository": {
